--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="#">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/12b8275adb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>AppSus</title>
